updated tex files

--- a/docs/latex/001-resumen.tex
+++ b/docs/latex/001-resumen.tex
@@ -4,7 +4,7 @@ Para resolver las tareas de perfilado de autor, la mayoría de los trabajos exis
 
 La principal motivación para el uso de redes neuronales en perfilado de autor, es debido al increíble éxito del aprendizaje profundo en tareas complejas del procesamiento del  lenguaje natural. De acuerdo al estado del arte en la última conferencia del PAN@CLEF los equipos con mejores resultados utilizaron técnicas tradicionales de aprendizaje. Así también en las tareas del ERISK el mejor sistema se construyó extrayendo características en combinación con un ensamble de bolsas de palabras y diferentes clasificadores. Lo que se ha podido observar en los diferentes reportes de estas conferencias es, que los modelos de aprendizaje basados en redes neuronales no han tenido el éxito esperado. 
 
-Uno de los principales problemas dentro es la cantidad de datos etiquetados con que se cuenta y se hace más notable cuando se utilizan modelos de aprendizaje profundo. En el caso de perfilado de autor la obtención de estos datos etiquetados manualmente consumen mucho tiempo, son costosos, además se podría comprometer a problemas legales debido al uso de datos personales. 
+Uno de los principales problemas dentro de perfilado de autor es la cantidad de datos etiquetados con que se cuenta y se hace más notable cuando se utilizan modelos de aprendizaje profundo. En el caso de perfilado de autor la obtención de estos datos etiquetados manualmente consumen mucho tiempo, son costosos, además se podría comprometer a problemas legales debido al uso de datos personales. 
 
 Dada esta problemática este trabajo presenta un estudio sobre el efecto de agregar documentos nuevos, generados artificialmente, mediante aumento de datos a nivel estructural, al  conjunto de entrenamiento original y el efecto que tiene en los algoritmos de redes neuronales aplicados en tareas relacionadas al perfilado de autor. Para ello, en esta tesis se propone un esquema general para el aumento de datos con diferentes estrategias de selección y reemplazo de palabras, principalmente enfocándose a las relaciones de similitud de las palabras. 
 
