--- a/docs/latex/06-Conclusiones.tex
+++ b/docs/latex/06-Conclusiones.tex
@@ -9,7 +9,7 @@ Gracias a los experimentos realizados y al análisis de los resultados, se llega
 \section{Conclusiones}
 
 Nuestra primera conclusión es que el aumento de datos ayuda a los métodos basados en redes neuronales, al menos, en las dos arquitecturas evaluadas. Los métodos propuestos mejoran el resultado y dependen fuertemente del conjunto de datos.    
-  El método propuesto restringiendo el reemplazo es el que  obtiene mejores resultados. Este método conserva las palabras con mayor puntuación $\chi^2$, sin embargo corre el riesgo de sobre ajuste conforme aumenta el número de documentos nuevos. Si se necesita un gran número de documentos el método basado en relaciones equivalentes es el ideal ya que ofrece un vocabulario más amplio mediante la elección de diferentes semillas (palabras relacionadas a la clase de interés). 
+  El método propuesto restringiendo el reemplazo es el que  obtiene mejores resultados. Este método conserva sin alteración las palabras con mayor puntuación $\chi^2$, sin embargo corre el riesgo de sobre ajuste conforme aumenta el número de documentos nuevos. Si se necesita un gran número de documentos el método basado en relaciones equivalentes es el ideal ya que ofrece un vocabulario más amplio mediante la elección de diferentes semillas (palabras relacionadas a la clase de interés). 
 
 Con respecto al efecto del aumento de datos en diferentes arquitecturas de red, el aumento de datos es de mayor beneficio para arquitecturas basadas en redes recurrentes, ya que consideran el texto como secuencia con valores dependientes en lugar de considerar características aisladas como es el caso de las redes convolucionales y los modelos lineales. En los modelos lineales se pudo observar un incremento significativo en los resultados de clasificación pero esto es debido a la importancia que se le está dando a la clase positiva y se logró comprobar con un modelo lineal que considera el desbalance; en donde la línea base es muy cercana a los valores que se pueden obtener realizando aumento de datos. Aún considerando este hecho es preferible realizar aumento de datos por los beneficios de regularización que ofrece.
 
