--- a/docs/latex/sections/05-experimentos/02-analisis.tex
+++ b/docs/latex/sections/05-experimentos/02-analisis.tex
@@ -2,7 +2,7 @@
 
 Con el objetivo de observar la relación entre el valor F1 alcanzado y la magnitud $n$ en el conjunto de datos, se presentan la figuras \ref{fig:aumento_n_depresion}, \ref{fig:aumento_n_depresion19} y \ref{fig:aumento_n_anorexia}. En las gráficas se comparan los métodos: sin aumento de datos, Tesauro, restricción $\chi^2$ , relación equivalente y relación contraria. Las gráficas se presentan en una escala de 0 a 100\% para el valor $F1$, el eje $x$ refleja el número de secuencias aumentadas por cada secuencia original en ele conjunto de entrenamiento y el eje $y$ la ganancia o perdida en $F1$ en comparación con la línea base que es no realizar aumento de datos. 
 
-En la figura \ref{fig:aumento_n_depresion} (a), el aumento para la red bidireccional, el mejor resultado con una ganancia de 4.51 puntos se obtiene con $n=4$ con el método \textit{Restricción $\chi^2$}. Se puede observar que una vez alcanzado el balance la ganancia comienza a decrecer, los métodos restantes no obtienen la misma ganancia, por lo que en esta tarea es importante conservar las características discriminantes cuando se realiza el aumento de datos, sin embargo, si el conjunto se n-plica muchas veces el modelo se sobre ajusta a los datos que se conservan.
+En la figura \ref{fig:aumento_n_depresion} (a), el aumento para la red bidireccional, el mejor resultado con una ganancia de 4.51 puntos se obtiene con $n=4$ con el método \textit{Restricción $\chi^2$}. Se puede observar que una vez alcanzado el balance la ganancia comienza a decrecer, los métodos restantes no obtienen la misma ganancia, por lo que en esta tarea es importante conservar las características discriminantes cuando se realiza el aumento de datos, sin embargo, si el conjunto se aumenta muchas veces el modelo se sobre ajusta a los datos que se conservan.
 
 En la figura \ref{fig:aumento_n_depresion} (b), aumento de datos para la red CNN, el mejor valor encontrado con una ganancia de 5.45 puntos fue con $n=6$ con el método \textit{Restricción $\chi^2$}. A diferencia de la red recurrente las ganancias en F1 se encuentran en un rango entre 0 y 5 puntos, los métodos con menor ganancia fueron; el basado en equivalencias y el relaciones contrarias.
 
@@ -26,7 +26,15 @@ La figura \ref{fig:aumento_n_anorexia} presenta el aumento de datos para el conj
 \newpage
 
 \subsection{Comparación con el estado del arte en detección de depresión y anorexia}
-En la figura \ref{fig:state_of_art} se comparan los resultados obtenidos mediante aumento de datos utilizando una red Bi-LSTM y el aumento de datos mediante el método Restrición $\chi^2$, con los modelos evaluados en la conferencia eRISK 2018 \citep{Losada2018}. Para detección de depresión de un total de 45 modelos nuestra propuesta se puede ubicar en el sexto lugar por arriba del tercer cuartil. Para la detección de anorexia, de un total de 35 propuestas nuestro modelo quedaría en el segundo lugar y muy por encima del tercer cuartil. Es importante señalar que para la detección de depresión el mejor modelo presentado en la tarea eRisk2018 se obtuvo mediante la ingeniería de características y para la detección de anorexia se utilizó una red convolucional con vectores distribucionales entrenados en un corpus perteneciente al dominio, por lo que dichas propuestas podrían mejorar mediante el aumento de datos propuesto. Como nota final los resultados para el conjunto de Depresión 2019 no se comparan con los obtenidos en el evento eRisk2019 por que se realizo una evalución diferente.
+En la figura \ref{fig:state_of_art} se comparan los resultados obtenidos mediante aumento de datos utilizando una red Bi-LSTM y el aumento de datos mediante el método Restrición $\chi^2$, con los modelos evaluados en la conferencia eRISK 2018 \citep{Losada2018}. Aunque la mayoría de los sistemas participantes en eRisk 2018 usaron todo el historial de los usuarios para tomar sus decisiones, alguno las hicieron considerando solo parte de las publicaciones, esto debido al énfasis de este foro de evaluación en la detección TEMPRANA de los usuarios con depresión y anorexia.
+
+Para detección de depresión de un total de 45 modelos nuestra propuesta se puede ubicar en el sexto lugar ubicado en el primer cuartil, aunque solo ligeramente por arriba del segundo. Para la detección de anorexia, de un total de 35 propuestas nuestro modelo quedaría en el segundo lugar y claramente ubicado en el primer cuartil, muy por encima del segundo. Es importante señalar que para la detección de depresión el mejor modelo presentado en la tarea eRisk2018 se obtuvo mediante la ingeniería de características y para la detección de anorexia se utilizó una red convolucional con vectores distribucionales entrenados en un corpus perteneciente al dominio, por lo que dichas propuestas podrían mejorar mediante el aumento de datos propuesto. 
+
+
+
+Como nota final los resultados para el conjunto de Depresión 2019 no se comparan con los obtenidos en el evento eRisk2019 por que el objetivo principal de esta tarea fue rellenar un cuestionario de forma automática y en base a este calcular el nivel de depresión que sufre el usuario; en este trabajo se le dio un tratamiento como clasificación binaria en la cual en base al historial del usuario se predice si esta deprimido o no.
+
+
 
 
 
