--- a/docs/latex/sections/figures/graficas_comparacion_anox.tex
+++ b/docs/latex/sections/figures/graficas_comparacion_anox.tex
@@ -21,6 +21,6 @@
         \caption{SVM-C}
     \end{subfigure}
     
-    \caption{Relación entre el aumento del conjunto de datos y la ganancia en F1 para el conjunto \textit{Anorexia}.}
+    \caption{Relación entre el aumento del conjunto de datos \textit{Anorexia} y la ganancia en F1.}
     \label{fig:aumento_n_anorexia}
 \end{figure}
