--- a/docs/latex/sections/tables/depresion_users_no_filter.tex
+++ b/docs/latex/sections/tables/depresion_users_no_filter.tex
@@ -1,5 +1,5 @@
 \begin{table}[!hbt]
-\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras después del pre-procesamiento, sin aplicar el filtro. Los números resaltados en negritas representan el numero de historiales comparado con el numero de secuencias.} \label{table:original_users}
+\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras después del pre-procesamiento, sin aplicar el filtro. Los números resaltados en negritas representan el número de historiales comparado con el número de secuencias.} \label{table:original_users}
 
 \begin{center}
 
@@ -14,7 +14,7 @@ deprimido                                                   & \textbf{135} - 31,
 \rowcolor[HTML]{FFFFFF} 
 no-deprimido                                                & \textbf{752} - 227,189                                & \textbf{741} - 272,703                                &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                                              & \textit{887 - 138,232}                       & \textit{\textbf{820} - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{202,151}} \\ \hline
+\textbf{Total}                                              & \textit{\textbf{887} - 138,232}                       & \textit{\textbf{820} - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{202,151}} \\ \hline
 \rowcolor[HTML]{EFEFEF} 
 \cellcolor[HTML]{EFEFEF}\textit{Conjunto 2: Depresión 2019} &                                              &                                              &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
