--- a/docs/latex/sections/tables/metodos_supervisados.tex
+++ b/docs/latex/sections/tables/metodos_supervisados.tex
@@ -1,8 +1,7 @@
-\begin{table}[!hbt]
+\begin{table}[!ht]
 \caption{Comparación del método propuesto con el estado del arte en aumento de datos para clasificación de textos.} \label{table:sup_meth}
 
-\centering
-\resizebox{\columnwidth}{!}{%
+\resizebox{\columnwidth}{!}{
 \begin{tabular}{llllllll}
 \hline
 \rowcolor[HTML]{EFEFEF} 
@@ -14,6 +13,6 @@ Kumar2019          & Dialogo            & No                                    
 Zhang2019          & Tematica             & No                                                              & Glove                                                      & No                                                                    & Si          & No                                                                                  \\ \hline
 \textbf{Propuesta} & \textbf{Perfilado} & \textbf{Si}                                                     & Glove                                                      & \textbf{No}                                                                    & \textbf{Si} & \textbf{Si}                                                                         \\ \hline
 \end{tabular}
-%
+
 }
 \end{table}
