--- a/docs/latex/sections/02-marco/01-text_clasif.tex
+++ b/docs/latex/sections/02-marco/01-text_clasif.tex
@@ -7,6 +7,6 @@ En años recientes, ha habido un crecimiento exponencial en el número de textos
 La clasificación de textos puede ser definida como la tarea de categorizar un grupo de documentos en una o más clases predefinidas de acuerdo a sus temas \citep{Kadhim2019}. Retomando la definición de \citep{Kadhim2019} se parte con un grupo específico de documentos  $D={\begin{Bmatrix} d_1 , ... , d_n \end{Bmatrix}}$ con clases predefinidas $C={\begin{Bmatrix} c_1 , ... , c_m \end{Bmatrix}}$ y un nuevo documento $q$ el cual es generalmente indicado como una consulta,  con el objetivo de predecir la  clase del documento consultado la cual puede ser una o más clases en $C$.
 
  
-De acuerdo a \citep{kowsari2019text}, la clasificación de textos puede describirse en cuatro pasos: extracción de características, reducción de dimensionalidad o selección de características, selección del clasificador y evaluación. A continuación  se resumen algunos de los puntos más importantes para este trabajo, tomados del análisis de \citep{kowsari2019text}.
+De acuerdo a \citep{kowsari2019text}, la clasificación de textos puede describirse en cuatro pasos: extracción de características, reducción de dimensionalidad o selección de características, construcción del modelo de clasificación y evaluación. A continuación  se resumen algunos de los puntos más importantes para este trabajo, tomados del análisis de \citep{kowsari2019text}.
 
 %r y vocal no pueden estar separadas
