--- a/docs/latex/sections/02-marco/02-caracteristicas.tex
+++ b/docs/latex/sections/02-marco/02-caracteristicas.tex
@@ -40,44 +40,6 @@ Bi-gramas:\{``con el", ``el tiempo", ``tiempo todo", ``todo pasa"\}
 El modelo de bolsa de palabras o BoW (por sus siglas en inglés ``Bag of Words'') es una representación simplificada de un texto. Normalmente, se utiliza un criterio o pesado específico, como lo puede ser la frecuencia de cada palabra, para representar cada texto . Es decir, en el modelo BoW, el conjunto de documentos es representado mediante una matriz de pesos, siendo las columnas palabras únicas del conjunto de datos y las filas representan un documento. Este modelo es muy simple, donde no es posible capturar el orden secuencial de las palabras -como en una oración o un documento-, con lo que las relaciones semánticas entre las palabras se pierden. Sin embargo, en este modelo las palabras capturan el contenido de un documento y esta representación puede ser utilizada para determinar el tema principal de dicho documento \citep{kowsari2019text}.
 
 
-%\textbf{Ejemplo de BoW}
-
-%\textbf{Texto original}: `` \textit{Informalmente, un algoritmo es cualquier procedimiento computacional bien definido que recibe algún valor, o conjunto de valores, como entrada y produce un valor, o conjunto de valores, como salida. Un algoritmo es entonces un conjunto de pasos computaciones que transforman la entrada en la salida.}''
-
-%\textbf{Bolsa de palabras}: \{procedimiento,
-% valores,
-% algoritmo,
-% bien,
-% de,
-% o,
-% que,
-% algun,
-% como,
-% valor,
-% salida,
-% transforman,
-% pasos,
-% recibe,
-% computaciones,
-% computacional,
-% ,,
-% Un,
-% la,
-% definido,
-% cualquier,
-% en,
-% Informalmente,
-% es,
-% produce,
-% .,
-% un,
-% entonces,
-% entrada,
-% conjunto,
-% y\}
-
-% \textbf{Pesos para el documento ejemplo}: [1, 2, 2, 1, 3, 2, 2, 1, 2, 2, 2, 1, 1, 1, 1, 1, 5, 1, 2, 1, 1, 1, 1, 2, 1, 2, 3, 1, 2, 3, 1]
-
 \subsubsection{Pesado de palabras}La forma más básica de pesado de características es mediante el pesado TF (\textit{term frequency} por sus siglas en inglés), el cual consiste en contar el número de ocurrencias de cada palabra en el conjunto de datos. Los métodos basados en TF generalmente consisten en representar la frecuencia de palabras como un peso escalado o normalizado, aunque es de fácil implementación y muy intuitivo este método está limitado por el hecho de que las palabras más comunes pueden dominar la representación.
 
 \subsubsection{TF-IDF Term Frequency-Inverse Document Frequency} Esta técnica de  pesado fue propuesta por \citep{jones1972statistical}, con el objetivo de mitigar el efecto de las palabras más comunes en el corpus. IDF asigna menos peso a aquellas palabras que por estar presentes en la mayoría de los documentos de la colección no son útiles para identificar patrones discriminativos. La representación matemática del peso de un término en un documento por TF-IDF está dada en la ecuación \ref{eq:tf_idf}
@@ -89,11 +51,10 @@ En donde $N$ es el número total de documentos en la colección y $df(t)$ es el 
 \subsection{Representaciones distribucionales}
 Su principal objetivo es capturar el significado semántico de las palabras, en donde cada palabra del vocabulario es representada mediante un vector n-dimensional de números reales. Recientemente \citep{mikolov2013distributed} presentó el modelo Word2Vec, para generar vectores de palabras, el cual tiene dos algoritmos: el modelo CBOW y el modelo Skip-gram respectivamente. CBOW  predice la palabra central del contexto que la rodea, mientras que Skip-gram hace lo contrario y predice la distribución (probabilidad) de las palabras de contexto de una palabra central. Word2Vec proporciona una herramienta muy poderosa para descubrir relaciones entre los textos de un corpus así como la similitud entre palabras.
 
-%Poner un diagrama
-%\subsection{Glove}
-Es un modelo similar Word2Vec, fue propuesto por \citep{pennington2014glove} y su objetivo principal de capturar contextos globales combinando factorización de matrices y ocurrencias locales. Este modelo demostró ser más rápido en entrenamiento y mejora en tareas como analogía (en comparación con Word2Vec). Los autores generaron diferentes modelos pre-entrenados para su libre acceso, estos modelos fueron entrenados sobre grandes conjuntos de datos como CRAWL\footnote{www.commoncrawl.org} y Wikipedia\footnote{www.wikipedia.org}.
+Glove es un modelo similar a Word2Vec, fue propuesto por \citep{pennington2014glove} y su objetivo principal de capturar contextos globales combinando factorización de matrices y ocurrencias locales. Este modelo demostró ser más rápido en entrenamiento y mejora en tareas como analogía (en comparación con Word2Vec). Los autores generaron diferentes modelos pre-entrenados para su libre acceso, estos modelos fueron entrenados sobre grandes conjuntos de datos como CRAWL\footnote{www.commoncrawl.org} y Wikipedia\footnote{www.wikipedia.org}.
 
-%\subsection{FastText}
 Otro modelo distribucional es el llamado FastText. Este modelo fue desarrollado por el laboratorio de inteligencia artificial de Facebook \citep{mikolov2017advances}. A diferencia de los modelos anteriores este modelo considera la morfología de las palabras, cada vector es enriquecido con una bolsa de vectores de caracteres de n-gramas que es derivada de una matriz de co-ocurrencia. La  principal ventaja de este modelo es su habilidad de obtener vectores para palabras fuera del vocabulario. Los vectores pre-entrenados están disponibles en la página oficial de FastText\footnote{www.fasttext.cc}  y la última liberación fue un modelo entrenado en 157 idiomas \citep{grave2018learning}.
 
 Para un mayor detalle de la teoría y el cálculo de este tipo de representaciones consultar el capítulo 5 del libro de \citep{kamath2019deep}.
+
+%%Aqui mas sobre BERT y representaciones del estado del arte.
