--- a/docs/latex/sections/03-trabajo/ap.tex
+++ b/docs/latex/sections/03-trabajo/ap.tex
@@ -1,12 +1,10 @@
 \section{Perfilado de autor}
 Los trabajos en perfilado de autor se han enfocado a identificar diversos rasgos de los autores: género, edad, nivel educativo, ocupación, rasgos de personalidad, tendencia política. Incluso han ido más allá al tratar de determinar características de comportamiento y condiciones médicas (trastornos como la anorexia o la depresión clínica). 
 
-%Diversas investigaciones se han realizado sobre la identificación de rasgos de un autor a partir de  sus escritos. 
 Los primeros trabajos, motivados por la sociolingüística, utilizaron documentos formales: libros, ensayos y/o noticias; variando el tamaño del corpus estudiado de docenas a cientos de documentos. 
 Uno de los primeros trabajos en perfilado de autor, usando medios automáticos, fue presentado por \citep{Pennebaker2002}. Los investigadores presentan evidencia que liga el uso de las palabras con aspectos de personalidad, situaciones sociales y psicológicas.
 
 \citep{Argamon2009} demostró que se puede conocer el género, edad, lengua nativa y personalidad con un buen margen de exactitud, a través de ensayos personales de estudiantes. Las características relevantes encontradas fueron estilísticas, por ejemplo, el uso de pronombres, preposiciones y verbos modales. 
-%En el caso de clasificar un texto como neurótico, la mayoría del contenido fue irrelevante y más útil características relacionadas con problemas personales y actividades de relajación.
 
 En la actualidad, la investigación se ha enfocado determinar el perfil del autor utilizando datos extraídos de redes sociales, blogs y foros en línea. A continuación se presentan algunos de los trabajos más relevantes para esta tesis, específicamente los presentados en las conferencias PAN@CLEF siendo una de las pioneras en su tipo al incluir el perfilado de autor en todas sus ediciones.
 
@@ -18,8 +16,6 @@ La técnica más común de \textbf{pre-procesamiento} entre los participantes es
 
 En cuanto a la \textbf{extracción de características} los n-gramas de caracteres y palabras son ampliamente usados, en efecto las mejores soluciones propuestas para el perfilado de género en el PAN 2017, 2018 y 2019 \citep{basile2017there, daneshvar2018gender, Pizarro2019} utilizaron un ensamble de n-gramas de caracteres y n-gramas de palabras. En estos trabajos se ha identificado que una representación mediante n-gramas de caracteres puede ser capaz de capturar fragmentos relacionados a la estructura y estilo del texto. Algunas implementaciones también han propuesto esquemas de pesado inspirados en \textit{tf-idf} poniendo énfasis en el estilo y contenido de los textos.
 
-%En el caso de los modelos basados en redes neuronales, la extracción de características es implícita en el modelo.
-
 Con respecto a los \textbf{algoritmos de clasificación} existe una gran cantidad de enfoques, siendo lo más común el algoritmo de máquinas de soporte vectorial (SVM). Un punto importante a destacar, es que a partir del año 2018 se han presentado algunas propuestas utilizando aprendizaje profundo. Sin embargo, hasta la fecha no han podido superar a los algoritmos tradicionales. 
 La primera vez que un enfoque de aprendizaje profundo, concretamente una arquitectura CNN, aparece entre los primeros lugares (lugar once) fue en la conferencia PAN 2019 \citep{Rangel2019}. Es importante notar, que ha diferencia del enfoque tradicional, en el caso de los modelos basados en redes neuronales, la extracción de características está implícita en su arquitectura.
 
@@ -29,7 +25,7 @@ La primera vez que un enfoque de aprendizaje profundo, concretamente una arquite
 Uno de los primeros estudios en la detección de depresión mediante medios automáticos \citep{rude2004language} encontró que los participantes deprimidos utilizan más palabras negativas y el uso del pronombre ``yo" ( \textit{``I"} en inglés) más que los participantes no deprimidos. 
 
 %Derivado de la investigación psicológica, \citep{wang2013depression} utilizo caracteristicas tales como el uso de pronombres en primera persona, la interacción social de los usuarios y comportamientos en micro-blogs.  
-Moviéndose a la investigación en redes sociales \citep{de2013predicting} empleo \textit{crowdsourcing} (una forma de colaboración empleando a múltiples personas a través de internet) para obtener un conjunto de usuarios de Twitter quienes reportaron ser diagnosticados con depresión clínica, en este trabajo demostraron el uso potencial de Twitter como una fuente de información para medir signos de depresión mayor en individuos. Encontraron que los individuos con depresión muestran baja actividad social, emociones negativas, auto atención, expresión de preocupaciones médicas y relacionales, además de pensamientos religiosos. Estos atributos fueron considerados para construir un clasificador SVM alcanzando una precisión de 70\%. Estos resultados demostraron la factibilidad de detectar la depresión en redes sociales. 
+Moviéndose a la investigación en redes sociales, \citep{de2013predicting} empleó \textit{crowdsourcing} (una forma de colaboración empleando a múltiples personas a través de internet) para obtener un conjunto de usuarios de Twitter quienes reportaron ser diagnosticados con depresión clínica, en este trabajo demostraron el uso potencial de Twitter como una fuente de información para medir signos de depresión mayor en individuos. Encontraron que los individuos con depresión muestran baja actividad social, emociones negativas, auto atención, expresión de preocupaciones médicas y relacionales, además de pensamientos religiosos. Estos atributos fueron considerados para construir un clasificador SVM alcanzando una exactitud de 70\%. Estos resultados demostraron la factibilidad de detectar la depresión en redes sociales. 
 
 Sin embargo, la creación de colecciones de documentos para abordar este tipo de problemas es costosa y difícil. Bajo estas condiciones y debido al particular interés en el perfilado de características de comportamiento \citep{kumar2018aggression} y trastornos mentales  \citep{de2013predicting}, se han desarrollado conferencias y competencias específicas.
 Una de ellas es la conferencia eRISK \citep{Losada2018}. El principal objetivo de este foro es la detección temprana de un trastorno a través de los historiales de comunicación de un usuario en blogs. Independientemente del enfoque de detección temprana también es de interés tratar la detección
