--- a/docs/latex/sections/05-experimentos/01-resultados.tex
+++ b/docs/latex/sections/05-experimentos/01-resultados.tex
@@ -4,11 +4,11 @@ En la tabla \ref{table:resultados} se presentan los resultados de los experiment
 
 En esta tabla se comparan los métodos propuestos; reemplazo mediante relaciones equivalentes, relaciones contrarias y restricción mediante la selección de características $\chi^2$, contra la línea base (sin aumento de datos) y los métodos de referencia: (i) sobre muestreo, (ii) utilizando un tesauro,y (iii)  selección sin restricción.
 
-Los mejores valores encontrados para cada conjunto de datos están resaltados en negritas. Así para el conjunto de \textit{Depresión 2018} el mejor valor encontrado fue de 53\% $\pm 1$  en \textit{F1} utilizando el método Sin restricción, para el conjunto de \textit{Depresión 2019} 88\% $\pm 2$ mediante los métodos: Tesauro, Restricción $\chi^2$ y Relación Positiva; finalmente para el conjunto de \textit{Anorexia} 82\% $\pm 1$ mediante el método Restricción $\chi^2$. En general los resultados para el conjunto de Depresión 2019 y Anorexia, son mejores en comparación a los obtenidos en el conjunto Depresión 2018, esto se lo podemos atribuir a la forma en que se etiquetaron los datos ya que para el conjunto de Depresión 2018 el etiquetado se realizó de forma automática y se capturo un gran número de falsos positivos.
+Los mejores valores encontrados para cada conjunto de datos están resaltados en negritas. Así para el conjunto de \textit{Depresión 2018} el mejor valor encontrado fue de 53\% $\pm 1$  en \textit{F1} utilizando el método Sin restricción, para el conjunto de \textit{Depresión 2019} 88\% $\pm 2$ mediante los métodos: Tesauro, Restricción $\chi^2$ y Relación Positiva; finalmente para el conjunto de \textit{Anorexia} 82\% $\pm 1$ mediante el método Restricción $\chi^2$. En general los resultados para el conjunto de Depresión 2019 y Anorexia, son mejores en comparación a los obtenidos en el conjunto Depresión 2018, esto se lo podemos atribuir a la forma en que se etiquetaron los datos ya que para el conjunto de Depresión 2018 el etiquetado se realizó de forma automática y presumimos se capturaron muchos falsos negativos.
 
 En primer lugar se compara la línea base (no realizar aumento de datos) contra los diferentes métodos de aumento de datos, en donde se puede observar que la mayoría de los métodos superan esta línea base, a excepción en el modelo basado en SVM-C para el conjunto de depresión 2019 en donde no se consigue mejorar el modelo base.
 
-Con respecto a los algoritmos el aumento de datos el método que sobre sale es el basado en Restricción $\chi^2$ ya que obtiene los mejores resultados para el conjunto de Depresión 2019 mediante la red Bi-LSTM y también para el conjunto de Anorexia utilizando la red CNN. Por otra parte en los algoritmos lineales se observa un gran incremento en el modelo SVM obteniendo mejores resultados, a excepción del conjunto Depresion 2019, en comparación con el algoritmo SVM-C que considera el desbalance de las clases. 
+Con respecto a los algoritmos el aumento de datos el método que sobresale es el basado en Restricción $\chi^2$ ya que obtiene los mejores resultados para el conjunto de Depresión 2019 mediante la red Bi-LSTM y también para el conjunto de Anorexia utilizando la red CNN. Por otra parte en los algoritmos lineales se observa un gran incremento en el modelo SVM obteniendo mejores resultados, a excepción del conjunto Depresion 2019, en comparación con el algoritmo SVM-C que considera el desbalance de las clases. 
 
 \input{sections/tables/resultados}
 
